Add Document API
